@@ -132,3 +132,7 @@ soundReverse    0
 # Remove GBA intros
 # 0=false, anything else for true
 removeIntros    0
+
+# Save Type
+# 0=automatic, 1=EEPROM, 2=SRAM, 3=Flash, 4=EEPROM+Sensor
+saveType        0
